<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:scrollbars="vertical"
  	android:scrollbarStyle="insideOverlay"
  	android:fadeScrollbars="true">
  <LinearLayout
  	android:padding="10dip"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="vertical"
  	android:background="@drawable/blackdot_old">
  <TextView 
  	android:text="@string/form_name"
  	android:id="@+id/formNameHeader" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content" />
  <EditText 
  	android:text="@string/form_edit" 
  	android:id="@+id/formEditName" 
  	android:layout_width="fill_parent" 
  	android:layout_height="wrap_content" />
  <TextView 
  	android:text="@string/form_mail" 
  	android:id="@+id/formEmailHeader" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content" />
  <EditText 
  	android:text="@string/form_edit" 
  	android:id="@+id/formEditEmail" 
  	android:layout_width="fill_parent" 
  	android:layout_height="wrap_content"
  	android:inputType="textEmailAddress" />
  <TextView 
  	android:text="@string/form_subject" 
  	android:id="@+id/formSubjectHeader" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content" />
  <EditText 
  	android:text="@string/form_edit" 
  	android:id="@+id/formEditSubject" 
  	android:layout_width="fill_parent" 
  	android:layout_height="wrap_content" />
  <TextView  
  	android:text="@string/form_comment" 
  	android:id="@+id/formCommentHeader" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content" />
  <EditText 
  	android:text="@string/form_edit" 
  	android:id="@+id/formEditComment" 
  	android:layout_width="fill_parent" 
  	android:layout_height="wrap_content" 
  	android:minLines="4"
  	android:inputType="textMultiLine"/>
  <TextView 
  	android:text="@string/form_captcha" 
  	android:id="@+id/formCaptchaHeader" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content" />
  <ImageView 
  	android:id="@+id/formCaptchaImage" 
  	android:layout_width="fill_parent" 
  	android:layout_height="wrap_content" 
  	android:src="@drawable/nocaptcha"
  	android:scaleType="fitCenter" />
  <EditText 
  	android:text="@string/form_edit" 
  	android:id="@+id/formEditCaptcha" 
  	android:layout_width="fill_parent"  
  	android:layout_height="wrap_content" />
 <TextView  
  	android:text="@string/forme_pw" 
  	android:id="@+id/formPasswordtHeader" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content" />
  <EditText 
  	android:text="password" 
  	android:id="@+id/formEditPassword" 
  	android:layout_width="fill_parent" 
  	android:layout_height="wrap_content"
  	android:maxLength="8"
  	android:inputType="textPassword"
  	 />
</LinearLayout>
</ScrollView>
